Update faculty storylist and details pages * Add user silhouettes to list and detail page * Truncate faculty quote to 200 characters * Set standard panel-body size across screen sizes * Fix navbar h1 margin on xsmall screens

--- a/static/css/stories.css
+++ b/static/css/stories.css
@@ -2,7 +2,7 @@
     margin-top: 20px;
 }
 .panel-body {
-    height: 350px;
+    height: 330px;
     align-items: center;
 }
 
@@ -24,7 +24,9 @@
 .panel-body img {
     height: 120px
 }
-
+h1 {
+    margin-top: unset;
+}
 h5 {
     text-transform: uppercase;
 }
@@ -45,9 +47,6 @@ h5 {
 }
 
 @media (min-width: 768px) {
-    .panel-body {
-        height: 425px;
-    }
     .panel-body hr {
          margin-top: unset;
     }
@@ -57,4 +56,10 @@ h5 {
     .panel-body img {
         height: 100px;
     }
+}
+
+@media(max-width:767px){
+    .panel-body {
+    height: 280px;
+}
 }
